--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.7"
+  },
+  "devDependencies": {
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
