--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,12 @@
+# Database
+DB_HOST=trolley.proxy.rlwy.net
 DB_USER=root
-DB_HOST=localhost
-DB_NAME=bookswap
-DB_PASSWORD=
-DB_PORT=5001
-JWT_SECRET=
+DB_PASSWORD=TaRzDjoGfxoIOVTdXVzRysTrVFTtGrEY
+DB_NAME=railway
+DB_PORT=33768
+
+# Server
+PORT=5001
+BASE_URL=http://localhost:5001  # Sans /api !
+FRONTEND_URL=http://localhost:5173
+
