url deploiemen backend

--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ DB_NAME=railway
 DB_PORT=33768
 
 # Server
-PORT=5001
-BASE_URL=http://localhost:5001  # Sans /api !
+PORT=8080
+BASE_URL=bookswap-production-dbda.up.railway.app  # Sans /api !
 FRONTEND_URL=http://localhost:5173
 
