--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # API
-VITE_API_URL=http://localhost:5001/api  # Préfixe VITE_ pour Vite.js
+VITE_API_URL=bookswap-production-dbda.up.railway.app/api  # Préfixe VITE_ pour Vite.js
