--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1"
@@ -31,6 +32,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
